# domain-adaptation-ct

./: .gitignore  .gitmodules  A_pipeline.ipynb  D20_pipeline.ipynb  D21_pipeline.ipynb  Image_Manipulation.ipynb  Image_Manipulation_CT.ipynb  Image_Manipulation_CT_local.ipynb  README.md  branched_resnet.py  branched_resnet_v2.py  ct_projection_proto.ipynb  kfold_splitter.ipynb  merge.ipynb  pyproject.toml  requirements.txt  resnet.py  setup.cfg  view_test_results.ipynb  view_test_results_kfold.ipynb
docker/: Dockerfile  build.sh  config.env  run.sh
docker/.ipynb_checkpoints/: Dockerfile-checkpoint  run-checkpoint.sh
experiment_configs/: dann_codetest_config_2025_10_26_12_27_PM.yaml  dann_quickcheck_config.yaml  dann_test_D21_v2_config.yaml  dann_test_quickcheck_config.yaml  dann_train_quickcheck_config.yaml  dann_train_val_D21_v2_config.yaml  dann_usualtraining_config.yaml
notebooks/: D20_Pipeline_clean.ipynb  D21_pipeline_v2.ipynb  Image_Manipulation.ipynb  Image_Manipulation_CT_local.ipynb  ct_projection_proto.ipynb  evaluate_experiment.ipynb  k.ipynb  kfold_splitter.ipynb  scratch.ipynb  tmp.ipynb
notebooks/eda/: check_npz.ipynb
notebooks/legacy/: D21_Pipeline_clean.ipynb  Image_Manipulation.ipynb  Image_Manipulation_CT_local.ipynb  NewTrainer.ipynb  cv_evaluate.ipynb  evaluate_experiment.ipynb  gradcam_explainability.ipynb  (+1 more)
scripts/: Untitled.ipynb  create_lambda_figure.py  draw_training_curves.py  run_evaluation.py  run_experiment.py  run_training.py  run_unit_tests.py  start_jupyter_lab.sh
tests/: run_unit_tests.py  training_logic_test.py
(+63 files in other folders)
