[metadata]
name = domain-adaptation-ct
version = 0.0.1
description = Repository
author = Your Name
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    torch
    torchvision
    transformers
    # add other runtime deps as needed

[options.packages.find]
where = src